--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 </div>
 
             </section>
-            <button id="girarTest" style="width:300px;float:right;">solve</button>
+            <button id="girarTest" style="width:300px;float:right;">test</button>
         </div>
         <div class="footer" data-role="footer">
             <h1>By Lucero, Meli y Orlando</h1>
