--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/rubik.css"></link>
     <link rel="stylesheet" href="css/styles.css"></link>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.0/themes/base/jquery-ui.css">
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
@@ -37,7 +36,7 @@
                 <div id="s6" class="square"></div>
 
                 <div id="s1" class="square"></div>
-                <div id="s4" class="square"></div>
+                <div id="s4" class="square center"></div>
                 <div id="s7" class="square"></div>
 
                 <div id="s2" class="square"></div>
