android interface test

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
             </div>
 
             <div id="color-pickers-tab">
-                <div id="color-picker-blue" class="color-picker" style="background:blue;"></div>
-                <div id="color-picker-orange" class="color-picker" style="background:orange;"></div>
-                <div id="color-picker-red" class="color-picker" style="background:red;"></div>
-                <div id="color-picker-white" class="color-picker" style="background:white;"></div>
-                <div id="color-picker-yellow" class="color-picker" style="background:yellow;"></div>
-                <div id="color-picker-green" class="color-picker" style="background:rgb(0,255,0);"></div>
+                <button id="color-picker-blue" class="color-picker" style="background:blue;"></button>
+                <button id="color-picker-orange" class="color-picker" style="background:orange;"></button>
+                <button id="color-picker-red" class="color-picker" style="background:red;"></button>
+                <button id="color-picker-white" class="color-picker" style="background:white;"></button>
+                <button id="color-picker-yellow" class="color-picker" style="background:yellow;"></button>
+                <button id="color-picker-green" class="color-picker" style="background:rgb(0,255,0);"></button>
             </div>
             <button id="statebtn">next face</button>
             <a id="rubik-link" href="#rubik-page" onclick="$('#rubik').show();"><h1 style="text-align:center">see rubik</h1></a>
