--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="http://yui.yahooapis.com/3.5.1/build/yui/yui-min.js"></script>
     <script src="js/rubik-simple.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="js/algorythm.js"></script>
 
 
 </head>
