--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
         <div class="header" data-role="header" style="overflow:hidden;">
             <h1>Cubbot</h1>
+            <a style=" background-color: #3f51b5;color: white;text-shadow: 0 1px 0 #059;border: none;" onclick="location.reload();" data-icon="refresh" class="ui-btn-left">restart</a>
             <button style=" background-color: #3f51b5;color: white;text-shadow: 0 1px 0 #059;border: none;" href="#" id="btn-connect" class="ui-btn-right ui-btn-icon-left ui-icon-arduino">Conectar</button>
             <button id="bt-conected" class="ui-btn ui-shadow ui-corner-all ui-btn-right ui-icon-check ui-btn-icon-notext"></button>
             <button id="bt-disconected" class="ui-btn ui-shadow ui-corner-all ui-btn-right ui-icon-check ui-btn-icon-notext"></button>
